--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,3 +1,4 @@
 - name: Github
-  link: 
-- name: Instapaper
+  link: https://github.com/asantos07/jekyll-theme-windows95/
+- name: Author
+  link: https://asantos07.github.io/
