--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,3 +2,5 @@
   link: https://github.com/asantos07/jekyll-theme-windows95/
 - name: Author
   link: https://asantos07.github.io/
+- name: RubyGems
+  link: https://rubygems.org/gems/jekyll-theme-windows95
