--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 url: https://asantos07.github.io/
-baseurl: jekyll-theme-windows95/
+baseurl: 
 
 # variables
-name: Jekyll Win95 Theme
+title: Jekyll Win95 Theme
 description: Jekyll theme inpired on the Win95 UI
-google_verification: null
+
+email: your-email@example.com
 
 
 # File management
