fixup! fixup! Sem necessidade pro Rake

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - JEKYLL_ENV=production
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 
-script:
+script: jekyll build
 
 deploy:
   provider: rubygems
