Website Update; neater!

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-.sass-cache/
+local/*
 _site
-*.gem
-.bundle
+.DS_Store
+*.sublime-project
+*.sublime-workspace
+codekit-config.json
+node_modules
 Gemfile.lock
+.sass-cache
+.jekyll-metadata
+local
