Added past events linnk

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,3 +4,5 @@
   link: https://github.com/hackseq/hackseq18
 - name: Social
   link: https://twitter.com/hackseq
+- name: Past_Events
+  link: https://www.hackseq.com/hackseq16/
